resolved-emoji-picker-was-behind-comments

--- a/src/pages/Dashboard/components/comments/commentsModal.scss
+++ b/src/pages/Dashboard/components/comments/commentsModal.scss
@@ -56,9 +56,9 @@
 
     aside.emoji-picker-react {
         position: absolute;
-        // top: -31.7rem;
         top: 4.3rem;
         right: 4rem;
+        z-index: 1;
     }
 }
 
